--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nabeel Bahurudeen | Mechanical Engineer Portfolio</title>
-    <meta
-      name="description"
-      content="Portfolio of Nabeel Bahurudeen, Mechanical Engineer and Designer at Sraco Saudi Arabia with expertise in mechanical design, engineering supervision, and project management."
-    />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" type="image/svg+xml" href="./src/assets/favicon_io/favicon-32x32.png" />
+  <link rel="manifest" href="/site.webmanifest">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nabeel Bahurudeen | Mechanical Engineer Portfolio</title>
+  <meta name="description"
+    content="Portfolio of Nabeel Bahurudeen, Mechanical Engineer and Designer at Sraco Saudi Arabia with expertise in mechanical design, engineering supervision, and project management." />
+  <meta name="description"
+    content="Explore the professional portfolio of Nabeel Bahurudeen, a skilled Mechanical Engineer and Designer at Sraco Saudi Arabia, showcasing expertise in mechanical design, engineering supervision, project management, and innovative mechanical solutions.">
+  <meta name="keywords"
+    content="Nabeel Bahurudeen, Mechanical Engineer, Mechanical Design, Project Management, Engineering Supervision, Sraco Saudi Arabia, Portfolio, Mechanical Engineering Projects, CAD Design, Saudi Arabia Engineers">
+  <meta name="author" content="Ashik Ibrahim">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
