New Content Changes Iteration 1 includes New Hero Section, About Section, Experience Section, Skills Section

--- a/index.html
+++ b/index.html
@@ -9,13 +9,43 @@
   <link rel="manifest" href="/site.webmanifest">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nabeel Bahurudeen | Mechanical Engineer Portfolio</title>
-  <meta name="description"
-    content="Portfolio of Nabeel Bahurudeen, Mechanical Engineer and Designer at Sraco Saudi Arabia with expertise in mechanical design, engineering supervision, and project management." />
-  <meta name="description"
-    content="Explore the professional portfolio of Nabeel Bahurudeen, a skilled Mechanical Engineer and Designer at Sraco Saudi Arabia, showcasing expertise in mechanical design, engineering supervision, project management, and innovative mechanical solutions.">
-  <meta name="keywords"
-    content="Nabeel Bahurudeen, Mechanical Engineer, Mechanical Design, Project Management, Engineering Supervision, Sraco Saudi Arabia, Portfolio, Mechanical Engineering Projects, CAD Design, Saudi Arabia Engineers">
-  <meta name="author" content="Ashik Ibrahim">
+  <meta name="description" content="Explore the professional portfolio of Nabeel Bahurudeen, a skilled Mechanical Engineer and Designer at Sraco Saudi Arabia, showcasing expertise in mechanical design, engineering supervision, project management, and innovative mechanical solutions.">
+
+  <meta name="keywords" content="Nabeel Bahurudeen, Mechanical Engineer, Mechanical Design, Project Management, Engineering Supervision, Sraco Saudi Arabia, Portfolio, Mechanical Engineering Projects, CAD Design, Saudi Arabia Engineers">
+  <meta name="author" content="Nabeel Bahurudeen">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Nabeel Bahurudeen | Mechanical Engineer Portfolio">
+  <meta property="og:description" content="Explore the portfolio of Nabeel Bahurudeen, Mechanical Engineer at Sraco Saudi Arabia.">
+  <meta property="og:image" content="./src/assets/favicon_io/favicon-32x32.png">
+  <meta property="og:url" content="https://nabeel-bahurudeen-portfolio.vercel.app/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Nabeel Bahurudeen | Mechanical Engineer Portfolio">
+  <meta name="twitter:description" content="Explore the portfolio of Nabeel Bahurudeen, Mechanical Engineer at Sraco Saudi Arabia.">
+  <meta name="twitter:image" content="./src/assets/favicon_io/favicon-32x32.png">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://nabeel-bahurudeen-portfolio.vercel.app/">
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Nabeel Bahurudeen",
+    "url": "https://nabeel-bahurudeen-portfolio.vercel.app/",
+    "image": "https://your-domain.com/path-to-image.jpg",
+    "jobTitle": "Mechanical Engineer",
+    "worksFor": {
+      "@type": "Organization",
+      "name": "Sraco Saudi Arabia"
+    },
+    "description": "Skilled Mechanical Engineer and Designer at Sraco Saudi Arabia specializing in mechanical design, engineering supervision, and project management."
+  }
+  </script>
 </head>
 
 <body>
